<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/header_text_label"
        android:theme="@style/header_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/paperID"
            android:layout_width="@dimen/simbol_width"
            android:layout_height="@dimen/simbol_height"
            android:layout_weight="1"
            android:contentDescription="@string/paper_simbol_description"
            android:onClick="getMyChoise"
            app:srcCompat="@drawable/carta" />

        <ImageView
            android:id="@+id/scissorsID"
            android:layout_width="@dimen/simbol_width"
            android:layout_height="@dimen/simbol_height"
            android:layout_weight="1"
            android:contentDescription="@string/scissors_simbol_description"
            android:onClick="getMyChoise"
            app:srcCompat="@drawable/forbice" />

        <ImageView
            android:id="@+id/rockID"
            android:layout_width="@dimen/simbol_width"
            android:layout_height="@dimen/simbol_height"
            android:layout_weight="1"
            android:contentDescription="@string/rock_simbol_description"
            android:onClick="getMyChoise"
            app:srcCompat="@drawable/pugno" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ia_choise"
        android:theme="@style/header_text"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/iaChoiceID"
        android:layout_width="@dimen/simbol_width"
        android:layout_height="@dimen/simbol_height"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/sonic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/game_result_label"
        android:theme="@style/header_text"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/iaChoiceID" />

    <ImageView
        android:id="@+id/resultID"
        android:layout_width="@dimen/simbol_width"
        android:layout_height="@dimen/simbol_height"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/pareggio" />
</androidx.constraintlayout.widget.ConstraintLayout>